--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -20,8 +20,6 @@ contourpy==1.2.1
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
-data-pipeline @ git+https://github.com/reichlab/flusion.git@ab82656e4724f1c33b4cf8b133f49befc4dc8e63#subdirectory=code/data-pipeline
-    # via jacques-flu (pyproject.toml)
 decorator==5.1.1
     # via tensorflow-probability
 dm-tree==0.1.8
@@ -129,7 +127,9 @@ rich==13.7.1
     #   jacques-flu (pyproject.toml)
     #   keras
 scipy==1.14.1
-    # via timeseriesutils
+    # via
+    #   jacques-flu (pyproject.toml)
+    #   timeseriesutils
 setuptools==73.0.1
     # via
     #   tensorboard
@@ -158,7 +158,7 @@ termcolor==2.4.0
     # via tensorflow
 tf-keras==2.17.0
     # via jacques-flu (pyproject.toml)
-timeseriesutils @ git+https://github.com/reichlab/timeseriesutils
+timeseriesutils @ git+https://github.com/reichlab/timeseriesutils/@d25f33db30a8d5252329269ec9d205984f980f6c
     # via jacques-flu (pyproject.toml)
 toml==0.10.2
     # via jacques-flu (pyproject.toml)
